--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
         
 
 </body>
-<script src="Class_Carossel.js" type="module"></script>
-<script src="modulo.js" type="module"></script>
+<script src="class-caroushell.js" type="module"></script>
+<script src="caroushell-config.js" type="module"></script>
 </html>
