--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="carrosel_banners.css">
+    <link rel="stylesheet" href="css/carrosel_banners.css">
+    <link rel="shortcut icon" href="64px slider.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/6cc179733b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <title>Document</title>
+    <title>Caroushell</title>
 </head>
 <body>
 
@@ -19,31 +20,31 @@
 
                 <li class="carrosel_x_li">
 
-                    <img class="carrosel_x_img" src="32px 1.png" alt="">
+                    <img class="carrosel_x_img" src="img/32px 1.png" alt="">
 
                 </li>
 
                 <li class="carrosel_x_li">
 
-                    <img class="carrosel_x_img" src="32px 2.png" alt="">
+                    <img class="carrosel_x_img" src="img/32px 2.png" alt="">
 
                 </li>
 
                 <li class="carrosel_x_li">
 
-                    <img class="carrosel_x_img" src="32px 3.png" alt="">
+                    <img class="carrosel_x_img" src="img/32px 3.png" alt="">
 
                 </li>
 
                 <li class="carrosel_x_li">
 
-                    <img class="carrosel_x_img" src="32px 4.png" alt="">
+                    <img class="carrosel_x_img" src="img/32px 4.png" alt="">
 
                 </li>
 
                 <li class="carrosel_x_li">
 
-                    <img class="carrosel_x_img" src="32px 5.png" alt="">
+                    <img class="carrosel_x_img" src="img/32px 5.png" alt="">
 
                 </li>
 
@@ -79,6 +80,6 @@
         
 
 </body>
-<script src="class-caroushell.js" type="module"></script>
-<script src="caroushell-config.js" type="module"></script>
+<script src="js/class-caroushell.js" type="module"></script>
+<script src="js/caroushell-config.js" type="module"></script>
 </html>
